MDEV-25536 InnoDB: Failing assertion: sym_node->table != NULL in pars_retrieve_table_def

InnoDB tries to fetch the deleted doc ids for discarded
tablespace. In i_s_fts_deleted_generic_fill(), InnoDB needs
to check whether the table is discarded or not before fetching
deleted doc ids.